package NAlice.NNlu;

option go_package = "a.yandex-team.ru/alice/nlu/proto/entities";
option java_package = "ru.yandex.alice.nlu.proto.entities";

import "search/begemot/core/proto/fields.proto";

message TFstEntity {
    optional uint32 Start                 = 1 [(external)="start"];
    optional uint32 End                   = 2 [(external)="end"];
    optional string Type                  = 3 [(external)="type"];
    optional string StringValue           = 4 [(external)="substr"];
    optional double Weight                = 5 [(external)="weight"];
    optional string Value                 = 6 [(external)="value"];
}

message TFstInput {
    optional string Text = 1;
    optional uint32 Language = 4;
};

message TFstResult {
    repeated TFstEntity Entities = 1 [(external)="entities"];
}
